; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_error.c_access_log_open.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_error.c_access_log_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"a\00", align 1
@access_log = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [2 x i8] c"w\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @access_log_open(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = icmp eq i8* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @F_OK, align 4
  %10 = call i32 @access(i8* %8, i32 %9)
  %11 = icmp ne i32 %10, -1
  br i1 %11, label %12, label %15

12:                                               ; preds = %7
  %13 = load i8*, i8** %3, align 8
  %14 = call i32* @fopen(i8* %13, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %14, i32** @access_log, align 8
  br label %18

15:                                               ; preds = %7
  %16 = load i8*, i8** %3, align 8
  %17 = call i32* @fopen(i8* %16, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %17, i32** @access_log, align 8
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i32*, i32** @access_log, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %18
  store i32 1, i32* %2, align 4
  br label %23

22:                                               ; preds = %18
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %21, %6
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @access(i8*, i32) #1

declare dso_local i32* @fopen(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
